<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context="com.exophrenik.grinia.retrieval.RetrievalScreen">

    <EditText
        style="@style/entryBox"
        android:id="@+id/retrieve_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="31dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.087" />

    <TextView
        style="@style/entryBox"
        android:id="@+id/retrieve_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_instructions"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/retrieve_email"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.032" />

    <TextView
        style="@style/entryBox"
        android:visibility="invisible"
        android:id="@+id/retrieve_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_instructions_result_error"
        android:layout_marginTop="83dp"
        app:layout_constraintTop_toBottomOf="@+id/retrieve_instructions"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.032" />

    <Button
        style="@style/entryButton"
        android:id="@+id/retrieve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_button"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/retrieve_result"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.44" />

</android.support.constraint.ConstraintLayout>
